# Shared-Autonomy

./: CMakeLists.txt  package.xml
include/opencv_test/: Draw_many_images_function.h  Shared_Autonomy.h  feature_extractor.h  gms_matcher.h  pioneer_simple_approach.h  samples_utility.h
src/: Birds_Eye_View.cpp  Birds_Eye_View2.cpp  Camera_Calibration.cpp  Lk_demo.cpp  Local_Autonomy.cpp  MIL_Tracker.cpp  Mouse_event_handler.cpp  Obstacle_avoidance_node.cpp  Pioneer_Final_IPM.cpp  Pioneer_IBVS.cpp  Pioneer_Simple_Transformation.cpp  Pioneer_Simple_approach_original.cpp  ROI.cpp  Shared_Autonomy.cpp  Shared_Autonomy_main.cpp  SparseToDenseOF.cpp  Surf_detection.cpp  Surf_matcher.cpp  Video_capture_from_live_camera.cpp  command_compensation_optical_flow.cpp  goturn.prototxt  head_camera.yaml  pioneer_simple_approach.cpp  simple_tracker.cpp  test.cpp  test110.py  tvl_opticalflow.cpp  visp_test.cpp
src/Feature_Extractor/: feature_extractor.cpp
